samples/_failures_safe/1761183677_5d8cd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da0beaf4.c: In function ‘main’:
./samples/SAFE/__tmp_da0beaf4.c:146:5: error: expected expression at end of input
  146 |     if (safe_strlen(input, MAX_INPUT_LEN) ==
      |     ^~
./samples/SAFE/__tmp_da0beaf4.c:146:5: error: expected declaration or statement at end of input
